--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="./">Home</a>
+          </li>
+          <li>
+            <a href="./fag.html">FAQ's</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <h1>JavaScript</h1>
   </body>
 </html>
