--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>JavaScript</h1>
+      <h1>JavaScript Study</h1>
       <nav>
         <ul>
           <li>
