--- a/fag.html
+++ b/fag.html
@@ -20,5 +20,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      Main Content
+    </main>
+    <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
 </html>
