--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      Main Content
+    </main>
+    <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
 </html>
