--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <li>
             <a href="./fag.html">FAQ's</a>
           </li>
+          <li>
+            <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
+          </li>
         </ul>
       </nav>
     </header>
