--- a/fag.html
+++ b/fag.html
@@ -17,6 +17,9 @@
           <li>
             <a href="./fag.html">FAQ's</a>
           </li>
+          <li>
+            <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
+          </li>
         </ul>
       </nav>
     </header>
