--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
             <a href="./">Home</a>
           </li>
           <li>
-            <a href="./fag.html">FAQ's</a>
+            <a href="./faq.html">FAQ's</a>
           </li>
           <li>
             <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
