--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="./">Home</a>
           </li>
           <li>
-            <a href="./fag.html">FAQ's</a>
+            <a href="./faq.html">FAQ's</a>
           </li>
           <li>
             <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
@@ -26,6 +26,10 @@
     </header>
     <main>
       Main Content
+      <h2>FAQ iframe</h1>
+      <iframe src="faq.html"></iframe>
+      <h2>Wiki iframe</h2>
+      <iframe src="https://www.wikipedia.org/"></iframe>
     </main>
     <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
