--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,10 @@
       </nav>
     </header>
     <main>
-      Main Content
+      <a href="" target="_blank" class="faq-box">
+        <h3 class="question"></h3>
+        <h4 class="answer"></h4>
+      </a>
     </main>
     <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
