--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>FAQ's</h1>
+      <h1>FAQ's - click for more info</h1>
       <nav>
         <ul>
           <li>
@@ -24,10 +24,33 @@
       </nav>
     </header>
     <main>
-      <a href="" target="_blank" class="faq-box">
-        <h3 class="question"></h3>
-        <h4 class="answer"></h4>
-      </a>
+      <div class="faq-container">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is JavaScript?</h3>
+          <h5 class="answer">
+            JavaScript is a scripting or programming language that allows you to
+            implement complex features on web pages — every time a web page does
+            more than just sit there and display static information for you to
+            look at — displaying timely content updates, interactive maps,
+            animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can
+            bet that JavaScript is probably involved.
+          </h5>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+      </div>
     </main>
     <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
