--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     </header>
     <main>
       Main Content
-      <h2>FAQ iframe</h1>
+      <h2>FAQ iframe</h2>
       <iframe src="faq.html"></iframe>
       <h2>Wiki iframe</h2>
       <iframe src="https://www.wikipedia.org/"></iframe>
+      <button type="button" onclick="example1()">I'm a button</button>
     </main>
     <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
