--- a/faq.html
+++ b/faq.html
@@ -41,9 +41,18 @@
           </h5>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
+        <a
+          href="https://www.w3schools.com/js/js_variables.asp"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is a variable?</h3>
+          <h4 class="answer">
+            Variable means anything that can vary. JavaScript includes variables
+            which hold the data value and it can be changed anytime. JavaScript
+            uses reserved keyword var to declare a variable. A variable must
+            have a unique name.
+          </h4>
         </a>
 
         <a href="" target="_blank" class="faq-box">
