--- a/faq.html
+++ b/faq.html
@@ -55,6 +55,34 @@
           </h4>
         </a>
 
+        <a
+          href="https://webplatform.github.io/docs/concepts/programming/javascript/libraries/"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">what is a javascript library?</h3>
+          <h4 class="answer">
+            In JavaScript, the way we do that is by using a library. A library
+            is a JavaScript file that contains a bunch of functions, and those
+            functions accomplish some useful task for your webpage.
+          </h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
         <a href="" target="_blank" class="faq-box">
           <h3 class="question"></h3>
           <h4 class="answer"></h4>
