--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./main.js"></script>
+    <script src="./main.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -29,6 +29,8 @@
 
       <iframe src="https://www.wikipedia.org/"></iframe>
       <button type="button" onclick="example1()">I'm a button</button>
+
+      <p id="demo"></p>
     </main>
     <footer>Copy righ &copy; Hex Zero 2020</footer>
   </body>
