--- a/faq.html
+++ b/faq.html
@@ -68,9 +68,49 @@
           </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
+        <a
+          href="https://www.w3schools.com/js/js_object_methods.asp"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What are Methods?</h3>
+          <h5 class="answer">
+            Methods are JavaScript functions that belong to objects. Methods
+            differ from functions in that methods are always associated and used
+            with a particular object. isNaN() is an example of a JavaScript
+            function. – Tests for “not a number”; if value = 0 (false), value is
+            a number
+          </h5>
+        </a>
+
+        <a
+          href="https://www.w3schools.com/js/js_events.asp"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What are Events?</h3>
+          <h4 class="answer">
+            Events are actions that trigger other actions to occur. • An event
+            handler is an optional script that handles input received in a
+            program. Handlers are JavaScript code inside the html tags (rather
+            than the script tags) that execute other JavaScript code in response
+            to an event.
+          </h4>
+        </a>
+
+        <a
+          href="http://xahlee.info/js/js_executing_order.html"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is loading order?</h3>
+          <h4 class="answer">
+            the browser will fetch and execute the script right away, and wait
+            for it to finish, before loading any HTML that appear after the
+            script tag. This means: If your JavaScript is slow, user will see
+            the browser freeze, showing no content after the script, until the
+            script execution is finished.
+          </h4>
         </a>
 
         <a href="" target="_blank" class="faq-box">
