--- a/faq.html
+++ b/faq.html
@@ -113,6 +113,28 @@
           </h4>
         </a>
 
+        <a
+          href="https://www.javascripttutorial.net/javascript-recursive-function/"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is Recursion?</h3>
+          <h3 class="answer">
+            Recursion is a programming technique in which a function calls
+            itself.
+          </h3>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
         <a href="" target="_blank" class="faq-box">
           <h3 class="question"></h3>
           <h4 class="answer"></h4>
