--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
             <a href="./">Home</a>
           </li>
           <li>
-            <a href="./faq.html">FAQ's</a>
+            <a href="./faq.html">Notes</a>
           </li>
           <li>
             <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
@@ -125,9 +125,18 @@
           </h3>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is XMLHttpRequest?</h3>
+          <h4 class="answer">
+            The XMLHttpRequestobject creates a call to the server. The open
+            method specifies the HTTP method for contacting the server and
+            provides the server’s Web address. The callback function gets a
+            response from the server. xhr.send(data)sends the data.
+          </h4>
         </a>
 
         <a href="" target="_blank" class="faq-box">
