--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="./">Home</a>
           </li>
           <li>
-            <a href="./faq.html">FAQ's</a>
+            <a href="./faq.html">Notes</a>
           </li>
           <li>
             <a href="https://github.com/Hex-Zero/JavaScriptLearning">Code</a>
