--- a/faq.html
+++ b/faq.html
@@ -139,14 +139,87 @@
           </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
+        <a
+          href="https://en.wikipedia.org/wiki/JSON"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is JSON?</h3>
+          <h4 class="answer">
+            JavaScript Object Notation is an open standard file format, and data
+            interchange format, that uses human-readable text to store and
+            transmit data objects consisting of attribute–value pairs and array
+            data types (or any other serializable value).
+          </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
+        <a
+          href="https://www.controldesign.com/assets/14WPpdf/1407TouchScreenBasicsComparisons.pdf"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">Touch Screens</h3>
+          <h4 class="answer">
+            • Resistive: Made up of several layers; topmost layer flexes when
+            pressed; sensors detect the pressure • Capacitive: Uses electrodes
+            to sense objects touching the screen; object must have conductive
+            properties
+          </h4>
+        </a>
+
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/TouchList"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is a Touch Object And Touchlist</h3>
+          <h4 class="answer">
+            In JavaScript, the touch object detects input from touch-enabled
+            devices. You reference touch objects in the touchlist, which
+            includes all of the points of contact with a touch screen. A single
+            tap has one entry in the touchlist, whereas a three-finger gesture
+            would have a total of three entries.
+          </h4>
+        </a>
+
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is Geolocation API</h3>
+          <h4 class="answer">
+            Defines an interface that provides a devise's location, usually
+            using latitude and longitue coordinates. API exposes the latitude
+            and longitude to JavaScript in a Web page using the geolocation
+            object
+          </h4>
+        </a>
+
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">Geolocation Methods</h3>
+          <h4 class="answer">
+            getCurrentPosition: Gets the device’s current geographic position.
+            watchPosition: Watches the device’s position as it changes over time
+            and generates an event if a change occurs
+          </h4>
+        </a>
+
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Using_web_workers"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What are Web Workers</h3>
+          <h4 class="answer">
+            Web Workers are scripts that run in the background, performing
+            calculations or other actions that allow for a more responsive user
+            interface.
+          </h4>
         </a>
 
         <a href="" target="_blank" class="faq-box">
