--- a/faq.html
+++ b/faq.html
@@ -223,6 +223,53 @@
         </a>
 
         <a href="" target="_blank" class="faq-box">
+          <h3 class="question">What are Web Sockets?</h3>
+          <h4 class="answer">
+            WebSockets is an API that offers full-duplex communication through a
+            single socket over the Internet.Real-time Web applications like
+            chat, multiplayer online gaming, and score trackers
+          </h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question">What is BLOB?</h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question">What is LocalStorage?</h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question">What is SessionStorage?</h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a
+          href="https://wiki.c2.com/?PlatformIndependence"
+          target="_blank"
+          class="faq-box"
+        >
+          <h3 class="question">What is Platform Independence?</h3>
+          <h4 class="answer">
+            Describes an application that can run on different desktop and
+            mobile device operating systems, such as Microsoft Windows, Internet
+            Explorer, Windows Phone, Mac OS X, Android, iOS, and Blackberry OS
+          </h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
+          <h3 class="question"></h3>
+          <h4 class="answer"></h4>
+        </a>
+
+        <a href="" target="_blank" class="faq-box">
           <h3 class="question"></h3>
           <h4 class="answer"></h4>
         </a>
