--- a/faq.html
+++ b/faq.html
@@ -222,7 +222,11 @@
           </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
+        <a
+          href="https://en.wikipedia.org/wiki/WebSocket"
+          target="_blank"
+          class="faq-box"
+        >
           <h3 class="question">What are Web Sockets?</h3>
           <h4 class="answer">
             WebSockets is an API that offers full-duplex communication through a
@@ -231,19 +235,47 @@
           </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Blob"
+          target="_blank"
+          class="faq-box"
+        >
           <h3 class="question">What is BLOB?</h3>
-          <h4 class="answer"></h4>
+          <h4 class="answer">
+            The Blob object represents a blob, which is a file-like object of
+            immutable, raw data; they can be read as text or binary data, or
+            converted into a ReadableStream so its methods can be used for
+            processing the data.
+          </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage"
+          target="_blank"
+          class="faq-box"
+        >
           <h3 class="question">What is LocalStorage?</h3>
-          <h4 class="answer"></h4>
+          <h4 class="answer">
+            localStorage is a type of web storage that allows JavaScript sites
+            and apps to store and access data right in the browser with no
+            expiration date. This means the data stored in the browser will
+            persist even after the browser window has been closed.
+          </h4>
         </a>
 
-        <a href="" target="_blank" class="faq-box">
+        <a
+          href="https://www.w3schools.com/jsref/prop_win_sessionstorage.asp"
+          target="_blank"
+          class="faq-box"
+        >
           <h3 class="question">What is SessionStorage?</h3>
-          <h4 class="answer"></h4>
+          <h4 class="answer">
+            Definition and Usage. The localStorage and sessionStorage properties
+            allow to save key/value pairs in a web browser. The sessionStorage
+            object stores data for only one session (the data is deleted when
+            the browser tab is closed). Tip: Also look at the localStorage
+            property which stores data with no expiration date.
+          </h4>
         </a>
 
         <a
@@ -257,26 +289,6 @@
             mobile device operating systems, such as Microsoft Windows, Internet
             Explorer, Windows Phone, Mac OS X, Android, iOS, and Blackberry OS
           </h4>
-        </a>
-
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
-        </a>
-
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
-        </a>
-
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
-        </a>
-
-        <a href="" target="_blank" class="faq-box">
-          <h3 class="question"></h3>
-          <h4 class="answer"></h4>
         </a>
       </div>
     </main>
